@@ -16,6 +16,13 @@ module Spec
         __raise "#{intro} received unexpected message :#{sym}#{arg_message(*args)}"
       end
       
+      def raise_unexpected_message_args_error expectation, *args
+        #this is either :no_args or an Array
+        expected_args = (expectation.expected_args == :no_args ? "no args" : format_args(*expectation.expected_args))
+        actual_args = args.empty? ? "no args" : format_args(*args)
+        __raise "#{intro} expected #{expectation.sym.inspect} with #{expected_args} but received it with #{actual_args}"
+      end
+      
       def raise_expectation_error sym, expected_received_count, actual_received_count, *args
         __raise "#{intro} expected :#{sym}#{arg_message(*args)} #{count_message(expected_received_count)}, but received it #{count_message(actual_received_count)}"
       end
@@ -48,8 +55,12 @@ module Spec
       
       def arg_message *args
         return "" if [:any_args] == args
-        return if args.empty?
-        " with [" + arg_list(*args) + "]"
+        return "" if args.empty?
+        " with " + format_args(*args)
+      end
+      
+      def format_args *args
+        "[" + arg_list(*args) + "]"
       end
 
       def arg_list(*args)
